--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.1",
+    "@ng-icons/core": "^29.5.1",
+    "@ng-icons/feather-icons": "^29.5.1",
+    "@ng-icons/heroicons": "^29.5.1",
     "express": "^4.18.2",
     "intersection-observer": "^0.12.2",
     "rxjs": "~7.8.0",
